# youtube-dashboard

./: README.md  app.py  requirements.txt
monitoring/: config.py  pipeline.py  youtube.py
python_monitoring/: README.md  dashboard.py  pyproject.toml  requirements.txt
python_monitoring/monitoring/: __init__.py  analyzer.py  cli.py  config.py  db.py  models.py  youtube.py
python_monitoring/tests/: test_core.py
