[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-opinion-monitoring"
version = "0.1.0"
description = "YouTube comment collection, structured AI analysis, SQLite storage, and a read-only Streamlit dashboard"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.160,<3",
  "google-genai>=1.20,<2",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "streamlit>=1.59,<2",
]

[project.scripts]
yt-monitor = "monitoring.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitoring*"]
